# win-event-log-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
ci/: Dockerfile-mingw  run.sh
examples/: simple.rs  subscribe.rs  with_serde.rs
src/: api.rs  lib.rs
src/query_list/: condition.rs  mod.rs  query_item.rs  selector.rs  suppressor.rs
src/query_list/event_filter/: computer.rs  data.rs  event.rs  level.rs  mod.rs  provider.rs  time.rs  user.rs
src/subscriber/: mod.rs
