[package]
name = "win-event-log"
version = "0.1.1"
authors = ["russ <russ@infocyte.com>"]
edition = "2018"

[lib]
doctest = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-gnu"

[dependencies]
bitflags = "1.0.4"
lazy_static = "1.2.0"
serde = { version = "1.0.85", optional = true }
serde_derive = { version = "1.0.85", optional = true, default-features = false }

[dependencies.serde-xml-rs]
version = "0.3.0"
optional = true
default-features = false
 
[dependencies.winapi]
version = "0.3.6"
features = [ "errhandlingapi", "minwindef", "winnt", "winevt", "libloaderapi", "synchapi", "winbase", "handleapi" ]

[features]
default = ["xml"]
xml = ["serde", "serde_derive", "serde-xml-rs"]
subscriber = []
